WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261014
[PGO] Some profdata not collected on macOS Sonoma
https://bugs.webkit.org/show_bug.cgi?id=261014
Summary
[PGO] Some profdata not collected on macOS Sonoma
Elliott Williams
Reported
2023-08-31 22:25:06 PDT
Appears to be due to changes in the WebContent process's sandbox.
rdar://113870737
Attachments
Add attachment
proposed patch, testcase, etc.
Elliott Williams
Comment 1
2023-08-31 22:41:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17327
EWS
Comment 2
2023-09-07 11:03:16 PDT
Committed
267741@main
(6fc61a30ebc7): <
https://commits.webkit.org/267741@main
> Reviewed commits have been landed. Closing PR #17327 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug